:bug: Fixed toast poition on mobile devices

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -878,4 +878,8 @@ input[type="radio"]:checked + label + .tab {
   .inner-right {
     margin-left: 0;
   }
+
+  .toasted {
+    margin-bottom: 68px;
+  }
 }
